--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "atom-sync",
-  "main": "./lib/atom-sync",
-  "version": "0.7.3",
-  "description": "Sync files bidirectionally between remote host and local over ssh+rsync",
+  "name": "atom-sync-cygwin",
+  "main": "./lib/atom-sync-cygwin",
+  "version": "0.7.4",
+  "description": "Sync files bidirectionally between remote host and local over ssh+rsync (optimized for Windows with cygwin)",
   "keywords": [
     "sync",
     "ssh",
@@ -10,7 +10,7 @@
     "rsync",
     "remote"
   ],
-  "repository": "https://github.com/dingjie/atom-sync",
+  "repository": "https://github.com/ayurmedia/atom-sync-cygwin",
   "license": "MIT",
   "engines": {
     "atom": ">=0.208.0 <2.0.0"
